--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,59 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Catholic Church Locations</h2>
+      <hr>
+      <h5>November 26, 2022 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 1</div>
+    <img src="blog/imgs/2022-11-26_catholiclocations/catholiclocations_01.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>A few weeks ago, I wrote a Blog Post about the three different St. Patrick's churches that were on West Main Street between 1844 and the present. Several people have since reached out and asked me to locate things on a map.</p>
+
+<p>Here goes...I used a Google Earth image of that part of West Main. To orient things, north is to the top of the map. The Four Corners is shown towards the upper right corner of the image.</p>
+
+<p>The yellow box and dot show the earliest locations of the church and rectory. The first church was flattened during the Tornado of 1856 which destroyed or damaged over 300 structures in the Town of Chateaugay. The second Church (on the same site) was shown in the photos that accompanied the Blog Post. It burned to the ground (in less than an hour) as the result of a lightning strike on July 12, 1919.</p>
+
+<p>But, even before the second church was destroyed, the parish was already thinking about building a larger church to accommodate the growing congregation. With that in mind, the parish purchased the land on the corner of Belle Avenue and West Main and the large home just to the west of it in 1911. That location is marked with the blue box and dot. Nothing happened as far as using the newly purchased property to erect a larger church and it sat unused.</p>
+
+<p>However, after the 1916 fire, the church had an opportunity to purchase the land where the church sits today. C.W. Sprague was willing to sell the large lot to St. Patrick's, so the decision was made to sell the unused lot on the corner of Belle Avenue and, eventually, the plot where the first two churches had stood, and build a larger Romanesque church on the much bigger lot which was also closer to the Four Corners.</p>
+
+<p>That's where the church sits today.</p>
+
+<p>All of this information is intended as background to the history of the present church building that is being researched and written by Rosemary Green. This coming July 8th will mark the 100th anniversary of the laying of the cornerstone of the present-day St. Patrick's.</p>
+
+<p>As Rosie is preparing her history of the Church of St. Patrick, I'd like to put out a plea...If anyone has photos showing the church (inside or outside) through the years, please consider loaning them to this project, so they can be scanned. I promise they will be carefully scanned and promptly returned. Contact us via email (chathistsoc@gmail.com) or Facebook PM me (Mick Jarvis) or Rosemary Green if you have any images that you would be willing to share for her project.</p>
+
+<p>Thanks.</p>
+
+<p>The image above shows the three church locations (well actually three churches, but just two building locations and one proposed but unused piece of property)...</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Wooden Water Pipes in Chateaugay</h2>
       <hr>
       <h5>November 16, 2022 | Mick Jarvis</h5>
@@ -84,57 +137,57 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 8</div>
     <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 8</div>
     <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 8</div>
     <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">4 / 8</div>
     <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">5 / 8</div>
     <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">6 / 8</div>
     <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">7 / 8</div>
     <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">8 / 8</div>
     <img src="blog/imgs/2022-11-16_woodenpipes/woodenpipes_08.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -183,7 +236,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Here Comes Winter</h2>
@@ -197,15 +250,15 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 1</div>
     <img src="blog/imgs/2022-11-14_winter/winter_01.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -221,131 +274,12 @@
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Catholic Churches of Chateaugay</h2>
-      <hr>
-      <h5>November 5, 2022 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 11</div>
-    <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 11</div>
-    <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_02.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">3 / 11</div>
-    <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_03.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">4 / 11</div>
-    <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_04.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">5 / 11</div>
-    <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_05.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">6 / 11</div>
-    <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_06.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">7 / 11</div>
-    <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_07.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">8 / 11</div>
-    <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_08.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">9 / 11</div>
-    <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_09.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">10 / 11</div>
-    <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_10.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">11 / 11</div>
-    <img src="blog/imgs/2022-11-05_catholicchurches/CatholicChurches_11.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>This blog post had its beginnings in a conversation I had with Geri Favreau, president of the Clinton County Historical Association, about an ecclesiastical painter named Angelo Metallo who did murals at the former St. Philomena’s/Immaculate Heart of Mary Church in Churubusco and in St. Patrick’s Church in Rouses Point. It turns out that he also did painting at St. Patrick’s in Chateaugay. Who knew?? According to the August 17, 1928 issue of the <i>Chateaugay Record</i>, Professor Metallo was “decorating the interior of St. Patrick’s” and would be moving on to a similar contract at the church in Churubusco.</p>
-
-<p>Naturally, I went back into our files to see if there was any information about paintings that were done at St. Patrick’s in Chateaugay. I found many photos of the Catholic Churches in Chateaugay over the years but nothing about any specific murals or scenes. I took some new photos of the present church and decided while the research into Professor Metallo continues, and a post (or newsletter article) about him and his works will eventually appear, that I would do a blog post on the three Catholic Churches that have been on West Main Street over the last 178 years—with photos.</p>
-
-<p>The first was built in 1844 by Father James Keveny of Hogansburg. Masses were said in the new church very intermittently due to the large territory that Father Keveny had to minister to. The local church and the one in Malone were mission churches of Hogansburg until 1848. Chateaugay then became a mission of the newly formed St. Joseph’s Parish in Malone with Father Bernard McCabe as pastor. St. Patrick's Church of Chateaugay was officially incorporated under his leadership on August 16th, 1848.</p> 
-
-<p>In 1856, this original, very small church was destroyed by the tornado that tore through the Fort Covington, Burke and Chateaugay communities, destroying over 360 buildings in Chateaugay alone. The cyclonic winds and baseball sized hailstones flattened the little Catholic Church on what is now West Main Street. For the next three years, Masses were said in various buildings in the village.</p>
-
-<p>No photos or other depictions of that first church are known to exist. It has only been described as wood-framed and quite small. </p>
-
-<p>Finally, in 1859, construction of a new, larger church was begun on the same site on West Main (the area where the American Legion and a private home now stand). Father Anthony Theves, pastor of St. Joseph's Church in Malone and its missions in Chateaugay and Brushton began the construction of the new building. The citizens of Chateaugay donated everything from money, grain, potatoes, their labor and other items so that construction of the new church could begin. However, it proved to be a slow and frustrating process. Four years later in 1863, only four walls and a roof had been constructed.</p>
-
-<p>That same year, St. Patrick’s Church in Chateaugay was established as an autonomous parish with Father Edmund DePauw as the first resident pastor. He approached the Chateaugay assignment with a dedication and fervor that impressed his parishioners. The congregation grew and his next challenge was the partially constructed second church. When he arrived, he described it as: “little better than a barn, with no pews, badly heated, and so unfinished that the snow found entrance, and the sacred wine froze in the chalice." The church construction was eventually completed with an ornate high altar, pews, steeple with a bell, and all the expected and required décor and statuary. Sheds for horse and buggy rigs sat to the east of the church.</p>
-
-<p><Unfortunately, disaster struck the parish of 2,000 on Wednesday, July 12, 1916. At 9pm, a powerful thunder and lightning storm hit the community. A lightning strike hit the bell tower and the church was burned to the ground within an hour. One legend has it that the only thing saved from the burning building was a statue of the Virgin Mary. Some accounts say other artifacts and items were successfully removed.</p>
-
-<p>The first photos above show three different views of this second Catholic Church. The first is a postcard. The second is a Henry Beach photo and the third is another postcard. Next is a photo of the interior of the old church. The resolution is very poor but one can still get a sense of the interior and the high altar on the back wall. The final photo is a much clearer image of the altar, showing the ornate design.</p>
-
-<p>After being forced to wait for seven years after losing their church to the lightning-caused fire, the St. Patrick’s congregation finally saw the beginning construction of their new home. This would become the present-day St. Patrick’s Church just west of the Four Corners. The inflation which followed WWI had stalled building plans. Masses were held in other larger buildings (a roller skating rink and Sprague’s garage) on West Main while construction was delayed.</p>
-
-<p>On July 8, 1923, the Bishop presided over the laying of the cornerstone for the new building. By the end of the next year, the exterior was largely complete. The first Mass said in the new St. Patrick’s was Midnight Mass on December 24, 1924. Interior finishing then followed. And, according to the <i>Chateaugay Record</i>, Angelo Metallo was part of the interior decorating being done in 1928. The Italian marble altar and fifty-four foot communion rail were installed in 1930. The stained glass windows would follow and the entire interior was eventually completed during the 1930s.</p>
-
-<p>There are six photos above of the completed, present-day building through the years. The first is a view of the Church with the original bell tower. The second shows the Church today with the copper sheathed spire which was installed in 1986. The third and fourth images are of the original white marble high altar, followed by a photo of the altar in 1982 (after the Vatican II renovations were completed) and finishing with a photo of the altar area, or apse, today.</p>
-
-<p>More on Professor Metallo to come…</p>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [November 19, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [November 27, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
